# g2root-core

./: .gitignore  Makefile.am  README.g2root  configure.ac
fastboot/: Makefile.am  protocol.c
libmincrypt/: Makefile.am
libzipfile/: Makefile.am
mkbootimg/: Makefile.am
tmzt/: .gitignore  usb_raw.c
